Afterburner metod animation + png images

--- a/wpfapp1/MainWindow.xaml
+++ b/wpfapp1/MainWindow.xaml
@@ -33,7 +33,7 @@
             -->
         <!--<Polygon Points="1,2,30,30,1,3" x:Name="myPoly" FillRule="EvenOdd" Fill="Black"></Polygon>-->
         <Image Source= "Images/laser.png" Grid.Row="19" Grid.Column ="10" Width="60" Height="60" x:Name="myLaser" Visibility="Hidden"></Image>
-        <Image Source= "Images/Space-Invaders-Ship.png" Grid.Row="20" Grid.Column ="10" Width="60" Height="60" x:Name="myShip" ></Image>
+        <Image Source= "Images/Space-Invaders-Ship.png" Grid.Row="19" Grid.Column ="10" Width="60" Height="60"  Margin="-15" x:Name="myShip" ></Image>
         
         <!--<Image Source= "Images/si1_1.png" Grid.Row="0" Grid.Column ="0" Width="50" Height="50" x:Name="si1" ></Image>-->
         <TextBlock  Grid.Row="0" Grid.Column="0" Width="200" Height="100" FontSize="12">
