--- a/wpfapp1/MainWindow.xaml
+++ b/wpfapp1/MainWindow.xaml
@@ -38,7 +38,8 @@
         
         <!--<Image Source= "Images/si1_1.png" Grid.Row="0" Grid.Column ="0" Width="50" Height="50" x:Name="si1" ></Image>-->
         <!--<TextBlock  Grid.Row="14" Grid.Column="12" Width="200" Height="100" FontSize="20" Margin="-15">Points:</TextBlock>-->
-        <TextBlock x:Name="myPoints" Grid.Row="2" Grid.Column="11" Width="200" Height="100" FontSize="20" Margin="-30">Points 0</TextBlock>
+        <TextBlock x:Name="myPoints" Grid.Row="20" Grid.Column="13" Width="200" Height="100" FontSize="20" Margin="-20">Points 0</TextBlock>
+        <TextBlock x:Name="Health" Grid.Row="21" Grid.Column="3" Width="200" Height="100" FontSize="20" Margin="-30">Power 3</TextBlock>
         <TextBlock x:Name="GameOverTxt" Grid.Row="14" Grid.Column="12" FontSize="50" Foreground="White" FontWeight="Bold" Margin="-120" Visibility="Hidden">Game Over</TextBlock>
             <!--<Image Grid.Row="0" Grid.Column="0" Width="100" Source="Images/si1_1.png" Margin="93,39,94,0" Height="100" VerticalAlignment="Top"/>-->
     </Grid>
