--- a/wpfapp1/MainWindow.xaml
+++ b/wpfapp1/MainWindow.xaml
@@ -27,7 +27,7 @@
         <Image Source= "Images/laser.png" Grid.Row="19" Grid.Column ="10" Width="60" Height="60" x:Name="myLaser" Visibility="Hidden"></Image>
 
         <Image Source= "Images/Space-Invaders-Ship.png" Grid.Row="20" Grid.Column ="10" Margin="-15,200,0,0" Width="60" Height="60"  x:Name="myShip" ></Image>
-        
+        <!--<Image Source= "Images/laser.png" Grid.Row="1" Grid.Column ="1" Width="50" Height="50" x:Name="myInvlaser" ></Image>-->
         <TextBlock x:Name="myPoints" Grid.Row="20" Grid.Column="2" Width="200" Height="100" FontSize="20" Margin="-22" Foreground="Blue">Points:0</TextBlock>
         <!--<TextBlock x:Name="Divider" Grid.Row="20" Grid.Column="4" Width="200" Height="100" FontSize="20" Margin="-15" Foreground="Blue">   |</TextBlock>-->
         <TextBlock x:Name="Health" Grid.Row="21" Grid.Column="2" Width="200" Height="100" FontSize="20" Margin="-22" Foreground="Blue">Power:3</TextBlock>
